// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApiStack synthesises without error 1`] = `
{
  "Outputs": {
    "StackIdMarker": {
      "Description": "Agora stack marker",
      "Value": "AgoraApiStack",
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`DataStack synthesises without error 1`] = `
{
  "Outputs": {
    "AccountabilityCacheTableName": {
      "Value": {
        "Ref": "AccountabilityCacheTableC8A2753E",
      },
    },
    "AccountabilityJobsTableName": {
      "Value": {
        "Ref": "AccountabilityJobsTableF8E84554",
      },
    },
    "GlueDatabaseName": {
      "Value": "agora_parquet",
    },
    "IngestCursorsTableName": {
      "Value": {
        "Ref": "IngestCursorsTable29E1E451",
      },
    },
    "IngestionRunsTableName": {
      "Value": {
        "Ref": "IngestionRunsTableCFCC4EFD",
      },
    },
    "LogsBucketName": {
      "Value": {
        "Ref": "LogsBucket9C4D8843",
      },
    },
    "ManifestoSecretArn": {
      "Value": {
        "Ref": "ManifestoApiKeySecretF736757D",
      },
    },
    "ParquetBucketName": {
      "Value": {
        "Ref": "ParquetBucket714C63C1",
      },
    },
    "RatelimitCounterTableName": {
      "Value": {
        "Ref": "RatelimitCounterTable234E83B9",
      },
    },
    "RawBucketName": {
      "Value": {
        "Ref": "RawBucket0C3EE094",
      },
    },
    "RawManifestTopicArn": {
      "Value": {
        "Ref": "RawManifestTopicE8D37C57",
      },
    },
    "ScheduleGroupName": {
      "Value": "agora-schedules",
    },
    "SummaryCacheTableName": {
      "Value": {
        "Ref": "SummaryCacheTable3708E51A",
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "AccountabilityCacheTableC8A2753E": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "AttributeDefinitions": [
          {
            "AttributeName": "party_topic_period",
            "AttributeType": "S",
          },
        ],
        "BillingMode": "PAY_PER_REQUEST",
        "KeySchema": [
          {
            "AttributeName": "party_topic_period",
            "KeyType": "HASH",
          },
        ],
        "SSESpecification": {
          "SSEEnabled": true,
        },
        "TableName": "agora_accountability_cache",
        "TimeToLiveSpecification": {
          "AttributeName": "expires_at",
          "Enabled": true,
        },
      },
      "Type": "AWS::DynamoDB::Table",
      "UpdateReplacePolicy": "Delete",
    },
    "AccountabilityJobsTableF8E84554": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "AttributeDefinitions": [
          {
            "AttributeName": "job_id",
            "AttributeType": "S",
          },
        ],
        "BillingMode": "PAY_PER_REQUEST",
        "KeySchema": [
          {
            "AttributeName": "job_id",
            "KeyType": "HASH",
          },
        ],
        "SSESpecification": {
          "SSEEnabled": true,
        },
        "TableName": "agora_accountability_jobs",
        "TimeToLiveSpecification": {
          "AttributeName": "expires_at",
          "Enabled": true,
        },
      },
      "Type": "AWS::DynamoDB::Table",
      "UpdateReplacePolicy": "Delete",
    },
    "BaseLambdaPolicy9A23B891": {
      "Properties": {
        "Description": "",
        "ManagedPolicyName": "AgoraBaseLambdaPolicy",
        "Path": "/",
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "xray:PutTraceSegments",
                "xray:PutTelemetryRecords",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": "cloudwatch:PutMetricData",
              "Condition": {
                "StringEquals": {
                  "cloudwatch:namespace": "Agora",
                },
              },
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::ManagedPolicy",
    },
    "BucketNotificationsHandler050a0587b7544547bf325f094a3db8347ECC3691": {
      "DependsOn": [
        "BucketNotificationsHandler050a0587b7544547bf325f094a3db834RoleB6FB88EC",
      ],
      "Properties": {
        "Code": {
          "ZipFile": "import boto3  # type: ignore
import json
import logging
import urllib.request

s3 = boto3.client("s3")

EVENTBRIDGE_CONFIGURATION = 'EventBridgeConfiguration'
CONFIGURATION_TYPES = ["TopicConfigurations", "QueueConfigurations", "LambdaFunctionConfigurations"]

def handler(event: dict, context):
  response_status = "SUCCESS"
  error_message = ""
  try:
    props = event["ResourceProperties"]
    notification_configuration = props["NotificationConfiguration"]
    managed = props.get('Managed', 'true').lower() == 'true'
    skipDestinationValidation = props.get('SkipDestinationValidation', 'false').lower() == 'true'
    stack_id = event['StackId']
    old = event.get("OldResourceProperties", {}).get("NotificationConfiguration", {})
    if managed:
      config = handle_managed(event["RequestType"], notification_configuration)
    else:
      config = handle_unmanaged(props["BucketName"], stack_id, event["RequestType"], notification_configuration, old)
    s3.put_bucket_notification_configuration(Bucket=props["BucketName"], NotificationConfiguration=config, SkipDestinationValidation=skipDestinationValidation)
  except Exception as e:
    logging.exception("Failed to put bucket notification configuration")
    response_status = "FAILED"
    error_message = f"Error: {str(e)}. "
  finally:
    submit_response(event, context, response_status, error_message)

def handle_managed(request_type, notification_configuration):
  if request_type == 'Delete':
    return {}
  return notification_configuration

def handle_unmanaged(bucket, stack_id, request_type, notification_configuration, old):
  def get_id(n):
    n['Id'] = ''
    sorted_notifications = sort_filter_rules(n)
    strToHash=json.dumps(sorted_notifications, sort_keys=True).replace('"Name": "prefix"', '"Name": "Prefix"').replace('"Name": "suffix"', '"Name": "Suffix"')
    return f"{stack_id}-{hash(strToHash)}"
  def with_id(n):
    n['Id'] = get_id(n)
    return n

  external_notifications = {}
  existing_notifications = s3.get_bucket_notification_configuration(Bucket=bucket)
  for t in CONFIGURATION_TYPES:
    if request_type == 'Update':
        old_incoming_ids = [get_id(n) for n in old.get(t, [])]
        external_notifications[t] = [n for n in existing_notifications.get(t, []) if not get_id(n) in old_incoming_ids]      
    elif request_type == 'Delete':
        external_notifications[t] = [n for n in existing_notifications.get(t, []) if not n['Id'].startswith(f"{stack_id}-")]
    elif request_type == 'Create':
        external_notifications[t] = [n for n in existing_notifications.get(t, [])]
  if EVENTBRIDGE_CONFIGURATION in existing_notifications:
    external_notifications[EVENTBRIDGE_CONFIGURATION] = existing_notifications[EVENTBRIDGE_CONFIGURATION]

  if request_type == 'Delete':
    return external_notifications

  notifications = {}
  for t in CONFIGURATION_TYPES:
    external = external_notifications.get(t, [])
    incoming = [with_id(n) for n in notification_configuration.get(t, [])]
    notifications[t] = external + incoming

  if EVENTBRIDGE_CONFIGURATION in notification_configuration:
    notifications[EVENTBRIDGE_CONFIGURATION] = notification_configuration[EVENTBRIDGE_CONFIGURATION]
  elif EVENTBRIDGE_CONFIGURATION in external_notifications:
    notifications[EVENTBRIDGE_CONFIGURATION] = external_notifications[EVENTBRIDGE_CONFIGURATION]

  return notifications

def submit_response(event: dict, context, response_status: str, error_message: str):
  response_body = json.dumps(
    {
      "Status": response_status,
      "Reason": f"{error_message}See the details in CloudWatch Log Stream: {context.log_stream_name}",
      "PhysicalResourceId": event.get("PhysicalResourceId") or event["LogicalResourceId"],
      "StackId": event["StackId"],
      "RequestId": event["RequestId"],
      "LogicalResourceId": event["LogicalResourceId"],
      "NoEcho": False,
    }
  ).encode("utf-8")
  headers = {"content-type": "", "content-length": str(len(response_body))}
  try:
    req = urllib.request.Request(url=event["ResponseURL"], headers=headers, data=response_body, method="PUT")
    with urllib.request.urlopen(req) as response:
      print(response.read().decode("utf-8"))
    print("Status code: " + response.reason)
  except Exception as e:
      print("send(..) failed executing request.urlopen(..): " + str(e))

def sort_filter_rules(json_obj):
  if not isinstance(json_obj, dict):
      return json_obj
  for key, value in json_obj.items():
      if isinstance(value, dict):
          json_obj[key] = sort_filter_rules(value)
      elif isinstance(value, list):
          json_obj[key] = [sort_filter_rules(item) for item in value]
  if "Filter" in json_obj and "Key" in json_obj["Filter"] and "FilterRules" in json_obj["Filter"]["Key"]:
      filter_rules = json_obj["Filter"]["Key"]["FilterRules"]
      sorted_filter_rules = sorted(filter_rules, key=lambda x: x["Name"])
      json_obj["Filter"]["Key"]["FilterRules"] = sorted_filter_rules
  return json_obj",
        },
        "Description": "AWS CloudFormation handler for "Custom::S3BucketNotifications" resources (@aws-cdk/aws-s3)",
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "BucketNotificationsHandler050a0587b7544547bf325f094a3db834RoleB6FB88EC",
            "Arn",
          ],
        },
        "Runtime": "python3.13",
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "BucketNotificationsHandler050a0587b7544547bf325f094a3db834RoleB6FB88EC": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F": {
      "DependsOn": [
        "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-eu-north-1",
          "S3Key": "faa95a81ae7d7373f3e1f242268f904eb748d8d0fdd306e8a6fe515a1905a7d6.zip",
        },
        "Description": {
          "Fn::Join": [
            "",
            [
              "Lambda function for auto-deleting objects in ",
              {
                "Ref": "LogsBucket9C4D8843",
              },
              " S3 bucket.",
            ],
          ],
        },
        "Handler": "index.handler",
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
            "Arn",
          ],
        },
        "Runtime": "nodejs24.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "FetchRiksDocumentsFnBED9DF3C": {
      "DependsOn": [
        "IngestRoleDefaultPolicy36CB560D",
        "IngestRoleAF8AE6D8",
      ],
      "Properties": {
        "Architectures": [
          "arm64",
        ],
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-eu-north-1",
          "S3Key": "d0afcdd3f06affeb58b2c603270a1dd94d084feb1e55e3542c9fab860c6e2b7b.zip",
        },
        "Environment": {
          "Variables": {
            "CURSOR_TABLE": {
              "Ref": "IngestCursorsTable29E1E451",
            },
            "RAW_BUCKET": {
              "Ref": "RawBucket0C3EE094",
            },
            "RUNS_TABLE": {
              "Ref": "IngestionRunsTableCFCC4EFD",
            },
          },
        },
        "FunctionName": "agora-fetch-riks-documents",
        "Handler": "index.handler",
        "MemorySize": 512,
        "Role": {
          "Fn::GetAtt": [
            "IngestRoleAF8AE6D8",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "FetchRiksDocumentsFnLogRetentionF251730E": {
      "Properties": {
        "LogGroupName": {
          "Fn::Join": [
            "",
            [
              "/aws/lambda/",
              {
                "Ref": "FetchRiksDocumentsFnBED9DF3C",
              },
            ],
          ],
        },
        "RetentionInDays": 30,
        "ServiceToken": {
          "Fn::GetAtt": [
            "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aFD4BFC8A",
            "Arn",
          ],
        },
      },
      "Type": "Custom::LogRetention",
    },
    "FetchRiksMembersFn2EE2FAFC": {
      "DependsOn": [
        "IngestRoleDefaultPolicy36CB560D",
        "IngestRoleAF8AE6D8",
      ],
      "Properties": {
        "Architectures": [
          "arm64",
        ],
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-eu-north-1",
          "S3Key": "f0233f8a1bdda352c3b0674d753b65622e7524c6d7ed7f089702ae196610c9fe.zip",
        },
        "Environment": {
          "Variables": {
            "CURSOR_TABLE": {
              "Ref": "IngestCursorsTable29E1E451",
            },
            "RAW_BUCKET": {
              "Ref": "RawBucket0C3EE094",
            },
            "RUNS_TABLE": {
              "Ref": "IngestionRunsTableCFCC4EFD",
            },
          },
        },
        "FunctionName": "agora-fetch-riks-members",
        "Handler": "index.handler",
        "MemorySize": 512,
        "Role": {
          "Fn::GetAtt": [
            "IngestRoleAF8AE6D8",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "FetchRiksMembersFnLogRetention5F8E1955": {
      "Properties": {
        "LogGroupName": {
          "Fn::Join": [
            "",
            [
              "/aws/lambda/",
              {
                "Ref": "FetchRiksMembersFn2EE2FAFC",
              },
            ],
          ],
        },
        "RetentionInDays": 30,
        "ServiceToken": {
          "Fn::GetAtt": [
            "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aFD4BFC8A",
            "Arn",
          ],
        },
      },
      "Type": "Custom::LogRetention",
    },
    "FetchRiksSpeechesFn7F27C5B3": {
      "DependsOn": [
        "IngestRoleDefaultPolicy36CB560D",
        "IngestRoleAF8AE6D8",
      ],
      "Properties": {
        "Architectures": [
          "arm64",
        ],
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-eu-north-1",
          "S3Key": "19098d825337a75c5826b217b6a4cf099f7a21d1bbb37b144df9ec79f450c9b8.zip",
        },
        "Environment": {
          "Variables": {
            "CURSOR_TABLE": {
              "Ref": "IngestCursorsTable29E1E451",
            },
            "RAW_BUCKET": {
              "Ref": "RawBucket0C3EE094",
            },
            "RUNS_TABLE": {
              "Ref": "IngestionRunsTableCFCC4EFD",
            },
          },
        },
        "FunctionName": "agora-fetch-riks-speeches",
        "Handler": "index.handler",
        "MemorySize": 512,
        "Role": {
          "Fn::GetAtt": [
            "IngestRoleAF8AE6D8",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "FetchRiksSpeechesFnLogRetention804F569F": {
      "Properties": {
        "LogGroupName": {
          "Fn::Join": [
            "",
            [
              "/aws/lambda/",
              {
                "Ref": "FetchRiksSpeechesFn7F27C5B3",
              },
            ],
          ],
        },
        "RetentionInDays": 30,
        "ServiceToken": {
          "Fn::GetAtt": [
            "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aFD4BFC8A",
            "Arn",
          ],
        },
      },
      "Type": "Custom::LogRetention",
    },
    "FetchRiksVotesFnC3C8FA4E": {
      "DependsOn": [
        "IngestRoleDefaultPolicy36CB560D",
        "IngestRoleAF8AE6D8",
      ],
      "Properties": {
        "Architectures": [
          "arm64",
        ],
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-eu-north-1",
          "S3Key": "81c6b1a8a358b053ff5a9a2c800e713076cb4f5c9631d981398276653d9e2782.zip",
        },
        "Environment": {
          "Variables": {
            "CURSOR_TABLE": {
              "Ref": "IngestCursorsTable29E1E451",
            },
            "RAW_BUCKET": {
              "Ref": "RawBucket0C3EE094",
            },
            "RUNS_TABLE": {
              "Ref": "IngestionRunsTableCFCC4EFD",
            },
          },
        },
        "FunctionName": "agora-fetch-riks-votes",
        "Handler": "index.handler",
        "MemorySize": 512,
        "Role": {
          "Fn::GetAtt": [
            "IngestRoleAF8AE6D8",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "FetchRiksVotesFnLogRetention66146BFD": {
      "Properties": {
        "LogGroupName": {
          "Fn::Join": [
            "",
            [
              "/aws/lambda/",
              {
                "Ref": "FetchRiksVotesFnC3C8FA4E",
              },
            ],
          ],
        },
        "RetentionInDays": 30,
        "ServiceToken": {
          "Fn::GetAtt": [
            "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aFD4BFC8A",
            "Arn",
          ],
        },
      },
      "Type": "Custom::LogRetention",
    },
    "GlueDatabase": {
      "Properties": {
        "CatalogId": "111111111111",
        "DatabaseInput": {
          "Name": "agora_parquet",
        },
      },
      "Type": "AWS::Glue::Database",
    },
    "IngestCursorsTable29E1E451": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AttributeDefinitions": [
          {
            "AttributeName": "source_stream",
            "AttributeType": "S",
          },
        ],
        "BillingMode": "PAY_PER_REQUEST",
        "KeySchema": [
          {
            "AttributeName": "source_stream",
            "KeyType": "HASH",
          },
        ],
        "SSESpecification": {
          "SSEEnabled": true,
        },
        "TableName": "agora_ingest_cursors",
      },
      "Type": "AWS::DynamoDB::Table",
      "UpdateReplacePolicy": "Retain",
    },
    "IngestRoleAF8AE6D8": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
          {
            "Ref": "BaseLambdaPolicy9A23B891",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "IngestRoleDefaultPolicy36CB560D": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:DeleteObject*",
                "s3:PutObject",
                "s3:PutObjectLegalHold",
                "s3:PutObjectRetention",
                "s3:PutObjectTagging",
                "s3:PutObjectVersionTagging",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "RawBucket0C3EE094",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "RawBucket0C3EE094",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "dynamodb:BatchGetItem",
                "dynamodb:Query",
                "dynamodb:GetItem",
                "dynamodb:Scan",
                "dynamodb:ConditionCheckItem",
                "dynamodb:BatchWriteItem",
                "dynamodb:PutItem",
                "dynamodb:UpdateItem",
                "dynamodb:DeleteItem",
                "dynamodb:DescribeTable",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "IngestCursorsTable29E1E451",
                    "Arn",
                  ],
                },
              ],
            },
            {
              "Action": [
                "dynamodb:GetRecords",
                "dynamodb:GetShardIterator",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "IngestCursorsTable29E1E451",
                    "Arn",
                  ],
                },
              ],
            },
            {
              "Action": [
                "dynamodb:BatchWriteItem",
                "dynamodb:PutItem",
                "dynamodb:UpdateItem",
                "dynamodb:DeleteItem",
                "dynamodb:DescribeTable",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "IngestionRunsTableCFCC4EFD",
                    "Arn",
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "IngestRoleDefaultPolicy36CB560D",
        "Roles": [
          {
            "Ref": "IngestRoleAF8AE6D8",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "IngestionRunsTableCFCC4EFD": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "AttributeDefinitions": [
          {
            "AttributeName": "source",
            "AttributeType": "S",
          },
          {
            "AttributeName": "run_id",
            "AttributeType": "S",
          },
        ],
        "BillingMode": "PAY_PER_REQUEST",
        "KeySchema": [
          {
            "AttributeName": "source",
            "KeyType": "HASH",
          },
          {
            "AttributeName": "run_id",
            "KeyType": "RANGE",
          },
        ],
        "SSESpecification": {
          "SSEEnabled": true,
        },
        "TableName": "agora_ingestion_runs",
        "TimeToLiveSpecification": {
          "AttributeName": "expires_at",
          "Enabled": true,
        },
      },
      "Type": "AWS::DynamoDB::Table",
      "UpdateReplacePolicy": "Delete",
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aFD4BFC8A": {
      "DependsOn": [
        "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB",
        "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-eu-north-1",
          "S3Key": "2819175352ad1ce0dae768e83fc328fb70fb5f10b4a8ff0ccbcb791f02b0716d.zip",
        },
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
            "Arn",
          ],
        },
        "Runtime": "nodejs24.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "logs:PutRetentionPolicy",
                "logs:DeleteRetentionPolicy",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB",
        "Roles": [
          {
            "Ref": "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "LogsBucket9C4D8843": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "AES256",
              },
            },
          ],
        },
        "BucketName": "agora-logs-111111111111",
        "LifecycleConfiguration": {
          "Rules": [
            {
              "ExpirationInDays": 90,
              "Status": "Enabled",
            },
          ],
        },
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true,
        },
        "Tags": [
          {
            "Key": "aws-cdk:auto-delete-objects",
            "Value": "true",
          },
        ],
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Delete",
    },
    "LogsBucketAutoDeleteObjectsCustomResource7D54FB85": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "LogsBucketPolicyD70D9252",
      ],
      "Properties": {
        "BucketName": {
          "Ref": "LogsBucket9C4D8843",
        },
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F",
            "Arn",
          ],
        },
      },
      "Type": "Custom::S3AutoDeleteObjects",
      "UpdateReplacePolicy": "Delete",
    },
    "LogsBucketPolicyD70D9252": {
      "Properties": {
        "Bucket": {
          "Ref": "LogsBucket9C4D8843",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:PutBucketPolicy",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
              ],
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::GetAtt": [
                    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
                    "Arn",
                  ],
                },
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "LogsBucket9C4D8843",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "LogsBucket9C4D8843",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "ManifestoApiKeySecretF736757D": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Description": "Manifesto Project WZB API key. Populated manually post-deploy.",
        "Name": "/agora/manifesto/api_key",
        "SecretString": "{}",
      },
      "Type": "AWS::SecretsManager::Secret",
      "UpdateReplacePolicy": "Delete",
    },
    "ParquetBucket714C63C1": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "AES256",
              },
            },
          ],
        },
        "BucketName": "agora-parquet-111111111111",
        "LifecycleConfiguration": {
          "Rules": [
            {
              "Status": "Enabled",
              "Transitions": [
                {
                  "StorageClass": "STANDARD_IA",
                  "TransitionInDays": 180,
                },
              ],
            },
          ],
        },
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true,
        },
        "VersioningConfiguration": {
          "Status": "Enabled",
        },
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "RatelimitCounterTable234E83B9": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "AttributeDefinitions": [
          {
            "AttributeName": "principal",
            "AttributeType": "S",
          },
          {
            "AttributeName": "window_start",
            "AttributeType": "N",
          },
        ],
        "BillingMode": "PAY_PER_REQUEST",
        "KeySchema": [
          {
            "AttributeName": "principal",
            "KeyType": "HASH",
          },
          {
            "AttributeName": "window_start",
            "KeyType": "RANGE",
          },
        ],
        "SSESpecification": {
          "SSEEnabled": true,
        },
        "TableName": "agora_ratelimit_counter",
        "TimeToLiveSpecification": {
          "AttributeName": "expires_at",
          "Enabled": true,
        },
      },
      "Type": "AWS::DynamoDB::Table",
      "UpdateReplacePolicy": "Delete",
    },
    "RawBucket0C3EE094": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "AES256",
              },
            },
          ],
        },
        "BucketName": "agora-raw-111111111111",
        "LifecycleConfiguration": {
          "Rules": [
            {
              "ExpirationInDays": 1095,
              "Status": "Enabled",
              "Transitions": [
                {
                  "StorageClass": "STANDARD_IA",
                  "TransitionInDays": 90,
                },
                {
                  "StorageClass": "GLACIER",
                  "TransitionInDays": 365,
                },
              ],
            },
          ],
        },
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true,
        },
        "VersioningConfiguration": {
          "Status": "Enabled",
        },
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "RawBucketNotificationsAC3090B1": {
      "DependsOn": [
        "RawBucketNotificationsHandlerPolicy6A258D27",
        "RawManifestTopicPolicy04F6ECBD",
        "RawManifestTopicE8D37C57",
      ],
      "Properties": {
        "BucketName": {
          "Ref": "RawBucket0C3EE094",
        },
        "Managed": true,
        "NotificationConfiguration": {
          "TopicConfigurations": [
            {
              "Events": [
                "s3:ObjectCreated:Put",
              ],
              "Filter": {
                "Key": {
                  "FilterRules": [
                    {
                      "Name": "suffix",
                      "Value": "manifest.json",
                    },
                  ],
                },
              },
              "TopicArn": {
                "Ref": "RawManifestTopicE8D37C57",
              },
            },
          ],
        },
        "ServiceToken": {
          "Fn::GetAtt": [
            "BucketNotificationsHandler050a0587b7544547bf325f094a3db8347ECC3691",
            "Arn",
          ],
        },
        "SkipDestinationValidation": false,
      },
      "Type": "Custom::S3BucketNotifications",
    },
    "RawBucketNotificationsHandlerPolicy6A258D27": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:PutBucketNotification",
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "RawBucket0C3EE094",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "RawBucketNotificationsHandlerPolicy6A258D27",
        "Roles": [
          {
            "Ref": "BucketNotificationsHandler050a0587b7544547bf325f094a3db834RoleB6FB88EC",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "RawManifestTopicE8D37C57": {
      "Properties": {
        "TopicName": "agora-raw-manifests",
      },
      "Type": "AWS::SNS::Topic",
    },
    "RawManifestTopicPolicy04F6ECBD": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "sns:Publish",
              "Condition": {
                "ArnLike": {
                  "aws:SourceArn": {
                    "Fn::GetAtt": [
                      "RawBucket0C3EE094",
                      "Arn",
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "s3.amazonaws.com",
              },
              "Resource": {
                "Ref": "RawManifestTopicE8D37C57",
              },
              "Sid": "0",
            },
          ],
          "Version": "2012-10-17",
        },
        "Topics": [
          {
            "Ref": "RawManifestTopicE8D37C57",
          },
        ],
      },
      "Type": "AWS::SNS::TopicPolicy",
    },
    "RiksDocumentsBetInvokeRoleA0429D6F": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "scheduler.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "RiksDocumentsBetInvokeRoleDefaultPolicyF4E81C46": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "FetchRiksDocumentsFnBED9DF3C",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "RiksDocumentsBetInvokeRoleDefaultPolicyF4E81C46",
        "Roles": [
          {
            "Ref": "RiksDocumentsBetInvokeRoleA0429D6F",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "RiksDocumentsBetScheduleCCF0AC30": {
      "Properties": {
        "FlexibleTimeWindow": {
          "Mode": "OFF",
        },
        "GroupName": "agora-schedules",
        "Name": "agora-ingest-riks-documents-bet",
        "ScheduleExpression": "cron(25 6 * * ? *)",
        "Target": {
          "Arn": {
            "Fn::GetAtt": [
              "FetchRiksDocumentsFnBED9DF3C",
              "Arn",
            ],
          },
          "Input": "{"doktyp":"bet"}",
          "RoleArn": {
            "Fn::GetAtt": [
              "RiksDocumentsBetInvokeRoleA0429D6F",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::Scheduler::Schedule",
    },
    "RiksDocumentsFrInvokeRoleC320A5B6": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "scheduler.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "RiksDocumentsFrInvokeRoleDefaultPolicyA3E351EB": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "FetchRiksDocumentsFnBED9DF3C",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "RiksDocumentsFrInvokeRoleDefaultPolicyA3E351EB",
        "Roles": [
          {
            "Ref": "RiksDocumentsFrInvokeRoleC320A5B6",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "RiksDocumentsFrSchedule720F4BBC": {
      "Properties": {
        "FlexibleTimeWindow": {
          "Mode": "OFF",
        },
        "GroupName": "agora-schedules",
        "Name": "agora-ingest-riks-documents-fr",
        "ScheduleExpression": "cron(31 6 * * ? *)",
        "Target": {
          "Arn": {
            "Fn::GetAtt": [
              "FetchRiksDocumentsFnBED9DF3C",
              "Arn",
            ],
          },
          "Input": "{"doktyp":"fr"}",
          "RoleArn": {
            "Fn::GetAtt": [
              "RiksDocumentsFrInvokeRoleC320A5B6",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::Scheduler::Schedule",
    },
    "RiksDocumentsIpInvokeRoleDefaultPolicyBF2F024C": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "FetchRiksDocumentsFnBED9DF3C",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "RiksDocumentsIpInvokeRoleDefaultPolicyBF2F024C",
        "Roles": [
          {
            "Ref": "RiksDocumentsIpInvokeRoleF5B0A29A",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "RiksDocumentsIpInvokeRoleF5B0A29A": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "scheduler.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "RiksDocumentsIpSchedule92AAFA0F": {
      "Properties": {
        "FlexibleTimeWindow": {
          "Mode": "OFF",
        },
        "GroupName": "agora-schedules",
        "Name": "agora-ingest-riks-documents-ip",
        "ScheduleExpression": "cron(29 6 * * ? *)",
        "Target": {
          "Arn": {
            "Fn::GetAtt": [
              "FetchRiksDocumentsFnBED9DF3C",
              "Arn",
            ],
          },
          "Input": "{"doktyp":"ip"}",
          "RoleArn": {
            "Fn::GetAtt": [
              "RiksDocumentsIpInvokeRoleF5B0A29A",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::Scheduler::Schedule",
    },
    "RiksDocumentsMotInvokeRole2A366E88": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "scheduler.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "RiksDocumentsMotInvokeRoleDefaultPolicyC235FDC8": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "FetchRiksDocumentsFnBED9DF3C",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "RiksDocumentsMotInvokeRoleDefaultPolicyC235FDC8",
        "Roles": [
          {
            "Ref": "RiksDocumentsMotInvokeRole2A366E88",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "RiksDocumentsMotSchedule36B10309": {
      "Properties": {
        "FlexibleTimeWindow": {
          "Mode": "OFF",
        },
        "GroupName": "agora-schedules",
        "Name": "agora-ingest-riks-documents-mot",
        "ScheduleExpression": "cron(15 6 * * ? *)",
        "Target": {
          "Arn": {
            "Fn::GetAtt": [
              "FetchRiksDocumentsFnBED9DF3C",
              "Arn",
            ],
          },
          "Input": "{"doktyp":"mot"}",
          "RoleArn": {
            "Fn::GetAtt": [
              "RiksDocumentsMotInvokeRole2A366E88",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::Scheduler::Schedule",
    },
    "RiksDocumentsPropInvokeRole8860DB0F": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "scheduler.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "RiksDocumentsPropInvokeRoleDefaultPolicy6CBC318A": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "FetchRiksDocumentsFnBED9DF3C",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "RiksDocumentsPropInvokeRoleDefaultPolicy6CBC318A",
        "Roles": [
          {
            "Ref": "RiksDocumentsPropInvokeRole8860DB0F",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "RiksDocumentsPropSchedule47E5CCBC": {
      "Properties": {
        "FlexibleTimeWindow": {
          "Mode": "OFF",
        },
        "GroupName": "agora-schedules",
        "Name": "agora-ingest-riks-documents-prop",
        "ScheduleExpression": "cron(20 6 * * ? *)",
        "Target": {
          "Arn": {
            "Fn::GetAtt": [
              "FetchRiksDocumentsFnBED9DF3C",
              "Arn",
            ],
          },
          "Input": "{"doktyp":"prop"}",
          "RoleArn": {
            "Fn::GetAtt": [
              "RiksDocumentsPropInvokeRole8860DB0F",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::Scheduler::Schedule",
    },
    "RiksDocumentsSkrInvokeRole82EEDCE9": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "scheduler.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "RiksDocumentsSkrInvokeRoleDefaultPolicyF20B4FD3": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "FetchRiksDocumentsFnBED9DF3C",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "RiksDocumentsSkrInvokeRoleDefaultPolicyF20B4FD3",
        "Roles": [
          {
            "Ref": "RiksDocumentsSkrInvokeRole82EEDCE9",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "RiksDocumentsSkrSchedule40920E2C": {
      "Properties": {
        "FlexibleTimeWindow": {
          "Mode": "OFF",
        },
        "GroupName": "agora-schedules",
        "Name": "agora-ingest-riks-documents-skr",
        "ScheduleExpression": "cron(27 6 * * ? *)",
        "Target": {
          "Arn": {
            "Fn::GetAtt": [
              "FetchRiksDocumentsFnBED9DF3C",
              "Arn",
            ],
          },
          "Input": "{"doktyp":"skr"}",
          "RoleArn": {
            "Fn::GetAtt": [
              "RiksDocumentsSkrInvokeRole82EEDCE9",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::Scheduler::Schedule",
    },
    "RiksMembersInvokeRole56EDE604": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "scheduler.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "RiksMembersInvokeRoleDefaultPolicy4721B153": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "FetchRiksMembersFn2EE2FAFC",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "RiksMembersInvokeRoleDefaultPolicy4721B153",
        "Roles": [
          {
            "Ref": "RiksMembersInvokeRole56EDE604",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "RiksMembersScheduleBC315E5D": {
      "Properties": {
        "FlexibleTimeWindow": {
          "Mode": "OFF",
        },
        "GroupName": "agora-schedules",
        "Name": "agora-ingest-riks-members",
        "ScheduleExpression": "cron(0 3 * * ? *)",
        "Target": {
          "Arn": {
            "Fn::GetAtt": [
              "FetchRiksMembersFn2EE2FAFC",
              "Arn",
            ],
          },
          "Input": "{}",
          "RoleArn": {
            "Fn::GetAtt": [
              "RiksMembersInvokeRole56EDE604",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::Scheduler::Schedule",
    },
    "RiksSpeecheesInvokeRoleA1AE1877": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "scheduler.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "RiksSpeecheesInvokeRoleDefaultPolicyD0FFAE44": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "FetchRiksSpeechesFn7F27C5B3",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "RiksSpeecheesInvokeRoleDefaultPolicyD0FFAE44",
        "Roles": [
          {
            "Ref": "RiksSpeecheesInvokeRoleA1AE1877",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "RiksSpeecheesSchedule26021AF9": {
      "Properties": {
        "FlexibleTimeWindow": {
          "Mode": "OFF",
        },
        "GroupName": "agora-schedules",
        "Name": "agora-ingest-riks-speechees",
        "ScheduleExpression": "cron(45 6 * * ? *)",
        "Target": {
          "Arn": {
            "Fn::GetAtt": [
              "FetchRiksSpeechesFn7F27C5B3",
              "Arn",
            ],
          },
          "Input": "{"rm":"2025/26"}",
          "RoleArn": {
            "Fn::GetAtt": [
              "RiksSpeecheesInvokeRoleA1AE1877",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::Scheduler::Schedule",
    },
    "RiksVotesInvokeRole39619C74": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "scheduler.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "RiksVotesInvokeRoleDefaultPolicy7EFFE21E": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "FetchRiksVotesFnC3C8FA4E",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "RiksVotesInvokeRoleDefaultPolicy7EFFE21E",
        "Roles": [
          {
            "Ref": "RiksVotesInvokeRole39619C74",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "RiksVotesSchedule52159D9D": {
      "Properties": {
        "FlexibleTimeWindow": {
          "Mode": "OFF",
        },
        "GroupName": "agora-schedules",
        "Name": "agora-ingest-riks-votes",
        "ScheduleExpression": "cron(40 6 * * ? *)",
        "Target": {
          "Arn": {
            "Fn::GetAtt": [
              "FetchRiksVotesFnC3C8FA4E",
              "Arn",
            ],
          },
          "Input": "{"rm":"2025/26"}",
          "RoleArn": {
            "Fn::GetAtt": [
              "RiksVotesInvokeRole39619C74",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::Scheduler::Schedule",
    },
    "ScheduleGroup": {
      "Properties": {
        "Name": "agora-schedules",
      },
      "Type": "AWS::Scheduler::ScheduleGroup",
    },
    "SummaryCacheTable3708E51A": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "AttributeDefinitions": [
          {
            "AttributeName": "dok_id_model",
            "AttributeType": "S",
          },
        ],
        "BillingMode": "PAY_PER_REQUEST",
        "KeySchema": [
          {
            "AttributeName": "dok_id_model",
            "KeyType": "HASH",
          },
        ],
        "SSESpecification": {
          "SSEEnabled": true,
        },
        "TableName": "agora_summary_cache",
        "TimeToLiveSpecification": {
          "AttributeName": "expires_at",
          "Enabled": true,
        },
      },
      "Type": "AWS::DynamoDB::Table",
      "UpdateReplacePolicy": "Delete",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`LlmStack synthesises without error 1`] = `
{
  "Outputs": {
    "StackIdMarker": {
      "Description": "Agora stack marker",
      "Value": "AgoraLlmStack",
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`ObsStack synthesises without error 1`] = `
{
  "Outputs": {
    "StackIdMarker": {
      "Description": "Agora stack marker",
      "Value": "AgoraObsStack",
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`WebStack synthesises without error 1`] = `
{
  "Outputs": {
    "StackIdMarker": {
      "Description": "Agora stack marker",
      "Value": "AgoraWebStack",
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
